--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,10 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/dh_project?serverTimezone=UTC&characterEncoding=UTF-8
-    username: root
-    password: 626512
+    username: ENC(ofyU6cXTJW1LzUfQ589kRg==)
+    password: ENC(444edSDWzZ6DZIlrUfLn8A==)
     driver-class-name: com.mysql.cj.jdbc.Driver
+
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
