--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,21 +5,33 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/dh_project?serverTimezone=UTC&characterEncoding=UTF-8
-    username: ENC(ofyU6cXTJW1LzUfQ589kRg==)
-    password: ENC(444edSDWzZ6DZIlrUfLn8A==)
+    username: ENC(XA0gffAsSgHSZJh617nnZQ==)
+    password: ENC(qKPAInArJkwfr7UViVRWmA==)
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  mail:
+    host: smtp.naver.com
+    port: 587
+    username: ENC(tujEgTVMwnxdGrpHVuEQHmWwihdnjxiK6aNAwkqhrlw=)
+    password: ENC(LPk7ZlYhGLVf6Eup116wKGT36SgTiAvw)
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
+    show_sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
       hibernate:
         format_sql: true
-        show_sql: true
-        highlight_sql: true
-    defer-datasource-initialization: true
+
 
 
   thymeleaf:
@@ -28,7 +40,7 @@ spring:
 #    suffix: .html
 #    mode: HTML5
 #    encoding: UTF-8
-#logging:
-#  level:
-#    org.thymeleaf: DEBUG
 
+logging:
+  level:
+    root: INFO
