회원가입 프론트 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,11 +35,9 @@ spring:
 
 
   thymeleaf:
+    prefix : classpath:/templates/
+    suffix: .html
     cache: false
-#    prefix: classpath:/templates
-#    suffix: .html
-#    mode: HTML5
-#    encoding: UTF-8
 
 logging:
   level:
