--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/dh_project?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/dh_project?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: ENC(XA0gffAsSgHSZJh617nnZQ==)
     password: ENC(qKPAInArJkwfr7UViVRWmA==)
     driver-class-name: com.mysql.cj.jdbc.Driver
