--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    open-in-view: false
+    defer-datasource-initialization: true
 
 
 
